[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/dialogue.png" type="Texture" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/GUI.gd" type="Script" id=3]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="dialogue_box" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialogue_box"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -35.0
margin_right = 64.0
size_flags_vertical = 0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="dialogue_box/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.5002
margin_top = -9.0
margin_right = 51.5002
margin_bottom = 10.0
theme = ExtResource( 2 )
text = "This is some sample text and stuff..."
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letter_timer" type="Timer" parent="."]
wait_time = 0.025
[connection signal="gui_input" from="dialogue_box" to="." method="_on_dialogue_box_gui_input"]
[connection signal="timeout" from="letter_timer" to="." method="_on_display_next_letter"]
